--- a/index.html
+++ b/index.html
@@ -90,7 +90,17 @@
         </div>
             
     </div>
-    <div class="mx-auto d-block text-center"> <span><a href="https://m.facebook.com/profile.php?id=100008293697749"><i class="fa fa-facebook-official" style="color: blue; font-size:30px;">  </i></a></span><span><i class="fa fa-whatsapp" style="color: green; font-size:30px; margin-left:30px;"></i></span></div>
+
+
+    <div id="foot" class="mx-auto d-block text-center">
+         <span>
+             <a href="https://m.facebook.com/profile.php?id=100008293697749">
+                <i class="fa fa-facebook-official" style="color: blue; font-size:30px;"></i>
+            </a>
+        </span>
+        <span>
+            <i class="fa fa-whatsapp" style="color: green; font-size:30px; margin-left:30px;"></i>
+        </span></div>
     <footer class="notice mx-auto d-block text-center"><h6 style="color: red;">Designed by  <br> <span style="color:rgb(189, 14, 14)">Alfulaani web world</span></h6></footer>
     
 </body>
